@@ -2,6 +2,7 @@ Release History
 
 v1.0.0905.1309
 - Better callbacks from JsonFx.JsonRpc.Settings
+- Allowing replacement of JSON-RPC serialization
 - Added JsonFx.IO.loadScript for assisting with cross-domain jsonp calls.
 
 v1.0.0905.1210
